# lenspect

./: README.md  SECURITY.md  io.github.vmkspv.lenspect.json  it.po  lenspect.desktop  lenspect.doap  meson.build
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: appimage.yml  flatpak.yml
data/: io.github.vmkspv.lenspect.SearchProvider.desktop.in  io.github.vmkspv.lenspect.SearchProvider.service.in  io.github.vmkspv.lenspect.desktop.in  io.github.vmkspv.lenspect.gschema.xml.in  io.github.vmkspv.lenspect.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  README.md  ar.po  bg.po  es.po  he.po  it.po  ja.po  lenspect.pot  meson.build  nl.po  pt_BR.po  ru.po  tr.po  uk.po  update-pot.sh  vi.po
src/: lenspect.gresource.xml  lenspect.in  lenspect_search_provider.in  main.py  meson.build  shortcuts-dialog.blp  style.css  vt_provider.py  window.blp  window.py
src/core/: config_manager.py  report_composer.py  secret_manager.py  toast_manager.py
src/ui/: dialog_manager.py  file_drop_handler.py  history_dialog.py  results_display.py
